objects/Car__c.object
<CustomObject>
    <label>Car</label>
    <nameField>
        <label>Car Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>MSRP__c</fullName>
        <label>MSRP</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ford</fullName>
                    <default>true</default>
                    <label>Ford</label>
                </value>
                <value>
                    <fullName>Hyundai</fullName>
                </value>
                <value>
                    <fullName>Honda</fullName>
                </value>
                <value>
                    <fullName>Renault</fullName>
                </value>
                <value>
                    <fullName>TATA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Control__c</fullName>
        <label>Control</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automatic</fullName>
                    <default>true</default>
                    <label>Automatic</label>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hatchback</fullName>
                    <default>true</default>
                    <label>Hatchback</label>
                </value>
                <value>
                    <fullName>MUV</fullName>
                </value>
                <value>
                    <fullName>SUV</fullName>
                </value>
                <value>
                    <fullName>SEDAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fuel_Type__c</fullName>
        <label>Fuel Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Picture_URL__c</fullName>
        <label>Picture URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Number_of_Seats__c</fullName>
        <label>Number of Seats</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>